# tank

./: CMakeLists.txt  Kconfig  LICENSE  README.md  api.md  debug.conf  prj.conf  sysbuild.conf  west.yml
.github/workflows/: build.yml
boards/: openjbod-hw.dtsi  openjbod-partitions-mcuboot.dtsi  rpi_pico.conf  rpi_pico.overlay  rpi_pico_rp2040_mcuboot.conf  rpi_pico_rp2040_mcuboot.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/entropy/: CMakeLists.txt  Kconfig  entropy_rpi_pico_rosc.c
drivers/flash/: CMakeLists.txt  Kconfig  flash_rpi_pico_fixed.c
dts/bindings/rng/: raspberrypi,pico-rosc-entropy.yaml
scripts/: inline_web_assets.py
src/: certificate.h  device_info.c  device_info.h  eeprom_mac.c  eeprom_mac.h  emc2301.c  emc2301.h  fan_control.c  fan_control.h  firmware_update.c  firmware_update.h  main.c  settings.c  settings.h  shell_cmds.c  sr_latch.c  sr_latch.h  status_led.c  status_led.h  temperature.c  temperature.h  usb_console.c  usb_console.h
src/certs/: .gitignore  gen_cert.sh
src/http/: api_token.c  api_token.h  auth.c  auth.h  headers.c  http_server.h  router.c  router.h  server_control.c  server_control.h  session.c  session.h  static_assets.c  static_assets.h
src/http/routes/: routes_auth.c  routes_auth.h  routes_certificates.c  routes_certificates.h  routes_core.c  routes_core.h  routes_environment.c  routes_environment.h  routes_power.c  routes_power.h  routes_reset.c  routes_reset.h  routes_settings.c  routes_settings.h  routes_tokens.c  routes_tokens.h  routes_users.c  routes_users.h
src/static_web_resources/: about.html  common.js  console.html  console.js  environment.html  environment.js  firmware.html  firmware.js  http.html  http.js  index.html  login.html  login.js  main.js  network.html  network.js  power.html  power.js  reset.html  reset.js  style.css  tokens.html  tokens.js  users.html  users.js
sysbuild/: mcuboot.conf  mcuboot.overlay
zephyr/: module.yml
